--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,5 +44,6 @@ subjects:
 - !lcsh 'Folk songs, Hungarian'
 - !lcc 'PH'
 - !lcsh 'Folklore -- Hungary'
+- GITenberg
 title: Székelyföldi gyüjtés (Népköltési gyüjtemény 3. kötet)
 url: http://www.gutenberg.org/ebooks/42020
